objects/Collateral__c.object
<CustomObject>
    <description>This object tracks the collateral of the customer (import from Excel by BIU)</description>
    <fields>
        <fullName>Amount_Guarantee__c</fullName>
        <inlineHelpText>จำนองค้ำฯผู้กู้</inlineHelpText>
        <label>Amount (Guarantee)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Guarantor__c</fullName>
        <inlineHelpText>จำนองค้ำฯผู้อื่น</inlineHelpText>
        <label>Amount (Guarantor)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CIS_ID__c</fullName>
        <label>CIS ID</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Collaterals</relationshipLabel>
        <relationshipName>Collaterals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Remaining_Balance__c</fullName>
        <label>Remaining Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remaining_Collateral_Balance__c</fullName>
        <label>Remaining Collateral Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>ที่ดินเปล่า</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ที่ดิน+สปส</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>เงินฝาก</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>รวม</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Collateral</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Ref #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaterals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>